--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,51 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+    <body>
+  <header>
+    <h2><%= link_to 'Bookers',root_path %></h2>
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to "Home", root_path  %>
+      </li>
+      <li>
+        <%= link_to "Users", users_path  %>
+      </li>
+      <li>
+        <%= link_to "Books", books_path  %>
+      </li>
+      <li>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to "Home", root_path  %>
+      </li>
+      <li>
+        <%= link_to "About", homes_about_path  %>
+      </li>
+      <li>
+        <%= link_to "Sign Up", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "Log in", new_user_session_path %>
+      </li>
+    <% end %>
+  </header>
+  <%= yield %>
+  <footer>
+    <div class ="container mt-5">
+      <div class="row">
+        <div class = "mx-auto">
+          <p>CopyRight Infratop.inc</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
