--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,9 @@
-<h1>homes/about</h1>
+<p>views/homes/about.html.erb</p>
+
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <h1>welcome to <i class="fas fa-book"></i><strong>Bookers!</strong></h1>
+    </div>
+  </div>
+</div>
