--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,22 +17,51 @@
           <%= link_to 'Bookers',root_path,class: 'navbar-brand' %>
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
-                <li><%= link_to "Home", root_path %></li>
-                <li><%= link_to "Users", users_path %></li>
-                <li><%= link_to "Books", books_path %></li>
-                <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+                <li><%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
+                <i class="fas fa-home"></i>
+                <span>Home</span>
+                <% end %></li>
+
+                <li><%= link_to users_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-users"></i>
+                <span>Users</span>
+                <% end %></li>
+
+                <li><%= link_to books_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-book-open"></i>
+                <span>Books</span>
+                <% end %></li>
+
+                <li><%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+                <i class="fas fa-sign-out-alt"></i>
+                <span>Log out</span>
+                <% end %></li>
               <% else %>
-                <li><%= link_to "Home", root_path %></li>
-                <li><%= link_to "About", homes_about_path %></li>
-                <li>
-                  <%= link_to "Sign Up", new_user_registration_path %></li>
-                <li><%= link_to "Log in", new_user_session_path %></li>
+                <li><%= link_to root_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-home"></i>
+                <span>Home</span>
+                <% end %></li>
+
+                <li><%= link_to homes_about_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-link"></i>
+                <span>About</span>
+                <% end %></li>
+
+                <li><%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-user-plus"></i>
+                <span>Sign up</span>
+                <% end %></li>
+
+                <li><%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-sign-in-alt"></i>
+                <span>Log in</span>
+                <% end %></li>
               <% end %>
             </ul>
         </div>
       </nav>
     </header>
-    <main class="mb-auto">
+    <main>
     <%= yield %>
     </main>
     <footer>
