--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,40 @@
-<h1>books/show</h1>
+<p>books/show</p>
+
+<%= render 'list' %>
+
+    <div class ="col-md-8 offset-md-1">
+      <h2>Books detail</h2>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+
+        <tr>
+          <td>
+          <%= link_to user_path(@book.user.id) do %>
+            <%= image_tag @book.user.get_profile_image("40x40") %><br>
+            <%= @book.user.name %>
+          <% end %>
+          </td>
+          <td>
+            <%= link_to book_path(@book.user.id) do %>
+            <%= @book.title %>
+            <% end %>
+          </td>
+          <% if user_signed_in? && current_user.id == @book.user_id %>
+          <td><%= @book.body %></td>
+          <td><%= link_to 'Edit',edit_book_path(@book),class: "btn btn-success"%></td>
+          <td><%= link_to 'Destroy',book_path(@book), method: :delete,"date-confirm" => "本当に消しますか？",class: "btn btn-danger" %></td>
+          <% end %>
+        </tr>
+
+        </tbody>
+      </table>
+    </div>
