--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -4,27 +4,27 @@
   <div class ="row">
     <div class ="col-md-3">
       <h2>User info</h2>
-      <p><%= image_tag @user.get_profile_image("63x63") %></p>
+      <p><%= image_tag user.get_profile_image("63x63") %></p>
       <table class="table">
         <tbody>
           <tr></tr>
           <tr>
             <th>name</th>
-            <th><%= @user.name %></th>
+            <th><%= user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th><%= @user.introduction %></th>
+            <th><%= user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class ="row">
-        <%= link_to edit_user_path(current_user.id), class: 'btn btn-outline-secondary btn-block' do %>
+        <%= link_to edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block' do %>
         <i class = "fas fa-user-cog"></i>
         <% end %>
       </div>
-      <h2>New Book</h2>
-        <%= form_with model: @book,url:'/books',method: :post, local:true do |f| %>
+      <h2>New book</h2>
+        <%= form_with model: book,url:'/books',method: :post, local:true do |f| %>
           <p>Title</p>
           <%= f.text_field :title %>
 
