--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -9,7 +9,7 @@
 <p>about various books!</p>
 
 <%= link_to "Log in", new_user_session_path,class:"btn btn-primary btn-block" %><br>
-<%= link_to "Sign Up", new_user_registration_path,class:"btn btn-success btn-block" %>
+<%= link_to "Sign up", new_user_registration_path,class:"btn btn-success btn-block" %>
     </div>
   </div>
 </div>
