--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,25 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <%= link_to 'Bookers',root_path,class: 'navbar-brand' %>
-            <ul class="navbar-nav ml-auto">
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+                <%= link_to root_path,class: 'navbar-brand' do %>
+          <span>Bookers</span>
+          <% end %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li><%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
                 <i class="fas fa-home"></i>
@@ -42,7 +52,7 @@
                 <span>Home</span>
                 <% end %></li>
 
-                <li><%= link_to homes_about_path, class: 'nav-link text-light' do %>
+                <li><%= link_to home_about_path, class: 'nav-link text-light' do %>
                 <i class="fas fa-link"></i>
                 <span>About</span>
                 <% end %></li>
@@ -58,11 +68,26 @@
                 <% end %></li>
               <% end %>
             </ul>
-        </div>
-      </nav>
+      </div>
+
+    </div>
+
+  </nav>
+
+
+
+
+
+
+
+
+
+
+
     </header>
+
     <% flash.each do |key, value| %>
-    <%= content_tag(:div, value, class: "#{key}") %>
+      <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
     <main>
     <%= yield %>
