--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,33 @@
 <p>users/edit.html.erb</p>
 
+<div class = "alert">
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+</div>
+
 <div class = "container">
   <div class ="row">
     <div class ="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
         <%= form_with model: @user, local:true do |f| %>
+      
           <div class = "form-group">
-            <label for="inputName">Name</label>
+            <label for="inputName">Name</label><br>
             <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
           </div>
           <div class = "form-group">
-            <label for="inputImage">Image</label>
+            <label for="inputImage">Image</label><br>
             <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
           </div>
           <div class = "form-group">
-            <label for="inputIntroduction">Introduction</label>
-            <%= f.text_field :introduction, autofocus: true,id:"inputIntroduction", placeholder:"説明" %>
+            <label for="inputIntroduction">Introduction</label><br>
+            <%= f.text_area :introduction, autofocus: true,id:"inputIntroduction", placeholder:"説明" %>
           </div>
           <div class = "form-group">
             <%= f.submit 'Update User',class:"btn btn-secondary" %>
@@ -24,3 +36,5 @@
     </div>
   </div>
 </div>
+
+
