--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,10 +16,10 @@
     <div class ="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
         <%= form_with model: @user, local:true do |f| %>
-      
+
           <div class = "form-group">
             <label for="inputName">Name</label><br>
-            <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+            <%= f.text_field :name, autofocus: true, id:"inputName",:class => "form-control"%>
           </div>
           <div class = "form-group">
             <label for="inputImage">Image</label><br>
@@ -27,7 +27,7 @@
           </div>
           <div class = "form-group">
             <label for="inputIntroduction">Introduction</label><br>
-            <%= f.text_area :introduction, autofocus: true,id:"inputIntroduction", placeholder:"説明" %>
+            <%= f.text_area :introduction, autofocus: true,id:"inputIntroduction",:class => "form-control" %>
           </div>
           <div class = "form-group">
             <%= f.submit 'Update User',class:"btn btn-secondary" %>
